--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon --exec electron .",
+    "start" : "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
